Закончил главную страницу

--- a/sass/blocks/contacts-block.scss
+++ b/sass/blocks/contacts-block.scss
@@ -76,6 +76,8 @@
   }
 
   @media #{$desktop-width} {
+    padding-top: 14px;
+
     &__wrapper {
       @include content-wrapper-desktop;
     }
@@ -83,23 +85,23 @@
     &__header {
       font-size: 50px;
       line-height: 60px;
-      // width: 500px;
+      width: 500px;
+    }
+
+    &__contacts {
+      align-items: flex-start;
+      justify-content: space-between;
+      padding-bottom: 5px;
     }
 
     &__contact {
       width: 300px;
+      margin-top: 3px;
 
       &:last-of-type {
-        width: 300px;
+        width: 220px;
       }
     }
-
-    &__contacts {
-
-      align-items: flex-start;
-      justify-content: space-between;
-    }
-
 
     &__contact:nth-child(1) {
       order: 1;
@@ -111,6 +113,10 @@
 
     &__contact:nth-child(3) {
       order: 2;
+    }
+
+    &__contact-title {
+      margin-bottom: 20px;
     }
   }
 }
