--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -111,7 +111,6 @@
   font-size: 14px;
   line-height: 24px;
   text-align: center;
-  // outline: 1px solid violet;
   padding: 40px 0 0 0;
   background-color: #fff;
   box-shadow: 0px 7px 30px -5px rgba(0,1,1,0.3);
@@ -131,7 +130,6 @@
 
   &__description {
     margin-top: 26px;
-    // margin-bottom: 5px;
   }
 
   &--wrong {
@@ -156,6 +154,10 @@
       margin-top: 30px;
       padding: 49px 20px 52px 20px;
     }
+  }
+
+  &--hidden {
+    display: none;
   }
 
   @media #{$tablet-width} {
@@ -382,12 +384,28 @@
 
       &__link {
         &--apple {
-          background: url(../img/logo-apple.svg) 50% 50% no-repeat;
           transform: translateY(0);
         }
         &--microsoft {
-          background: url(../img/logo-microsoft.svg) 50% 50% no-repeat;
           transform: translate(-3px, 3px);
+        }
+      }
+    }
+
+    @media #{$desktop-width} {
+      margin: 66px auto 53px auto;
+
+      &__link {
+        &--apple {
+          transform: translateX(3px);
+        }
+
+        &--microsoft {
+          transform: translate(-1px, 4px);
+        }
+
+        &--android {
+          transform: translate(0, 3px);
         }
       }
     }
@@ -430,7 +448,7 @@
   }
 
   @media #{$desktop-width} {
-    padding: 67px 0 76px 0;
+    padding: 67px 0 79px 0;
     font-size: 50px;
     line-height: 60px;
 
@@ -468,10 +486,6 @@
 .map {
   position: relative;
   height: 200px;
-  // background-color: red;
-  // background:
-  // url(../img/bg-triangle-white-footer.svg) no-repeat 50% 0,
-  // url(../img/bg-map.png) no-repeat 0 0;
 
   &::after {
     position: absolute;
@@ -579,6 +593,55 @@
 
   @media #{$desktop-width} {
     background-color: $pages-color-gray;
+    padding-bottom: 111px;
+
+    &__wrapper {
+      @include content-wrapper-desktop;
+      padding-left: 497px;
+      padding-right: 175px;
+    }
+
+    &__title {
+      font-size: 30px;
+      line-height: 30px;
+    }
+
+    &__text {
+      font-size: 18px;
+      line-height: 30px;
+      margin-bottom: 31px;
+
+      p {
+        margin-top: 1.3em;
+        margin-bottom: 1.3em;
+      }
+    }
+
+    &__link {
+      font-size: 18px;
+      line-height: 30px;
+    }
+
+    &::before {
+      width: 254px;
+      height: 254px;
+      top: 70px;
+      left: 153px;
+      font-size: 120px;
+      padding-top: 88px;
+      border-width: 17px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 345px;
+      height: 345px;
+      top: 1px;
+      left: 108px;
+      background: url(../img/icon-timer.svg) 0 0 no-repeat;
+      background-size: 345px 346px;
+    }
   }
 }
 
@@ -662,11 +725,10 @@
       position: absolute;
       width: 80px;
       height: 65px;
-      border: 1px solid black;
       left: 50%;
       top: 10px;
       transform: translateX(-50%);
-
+      background: url(../img/icon-quotes.svg) 0 0 no-repeat;
     }
   }
 }
