--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -86,5 +86,16 @@
       font-size: 18px;
       padding-right: 63px;
     }
+
+    &--index-page {
+      .page-footer__container {
+        padding-top: 35px;
+      }
+
+      .social-links {
+        padding-top: 21px;
+        padding-left: 21px;
+      }
+    }
   }
 }
