--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -184,65 +184,76 @@
     }
   }
 
-  // @media #{$desktop-width} {
-  //   padding-top: 60px;
-  //   &__wrapper {
-  //     @include content-wrapper-desktop;
-  //   }
+  @media #{$desktop-width} {
+    &__wrapper {
+        @include content-wrapper-desktop;
+    }
 
-  //   &__slides {
-  //     position: relative;
-  //     padding: 0 120px;
-  //   }
+    &--table-slider {
+      padding-top: 148px;
+      padding-bottom: 95px;
+    }
 
-  //   &__switcher {
-  //     display: none;
-  //   }
+    &--comment-slider {
+      padding-top: 60px;
 
-  //   &__toggle {
-  //     display: block;
-  //     @include reset-button-style;
-  //     position: absolute;
-  //     top: 50%;
-  //     transform: translateY(-50%) translateY(6px);
-  //     height: 100%;
-  //     width: 80px;
-  //     font-size: 0;
-  //     outline: none;
-  //     cursor: pointer;
+      .slider__wrapper {
+        @include content-wrapper-desktop;
+      }
 
-  //     &::before {
-  //       content: "";
-  //       position: absolute;
-  //       top: 50%;
-  //       width: 29px;
-  //       height: 29px;
-  //       transform-origin: 50% 50%;
-  //       // background-image: url("../img/logo-pink-blue-mobile.svg");
-  //       border: 2px solid #bec2c7;
-  //     }
+      .slider__slides {
+        position: relative;
+        padding: 0 120px;
+      }
 
-  //     &--prev {
-  //       left: 0;
+      .slider__switcher {
+        display: none;
+      }
 
-  //       &::before {
-  //         left: 0;
-  //         transform: translate(5px, -50%) rotate(-45deg);
-  //         border-bottom: none;
-  //         border-right: none;
-  //       }
-  //     }
+      .slider__toggle {
+        display: block;
+        @include reset-button-style;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%) translateY(6px);
+        height: 100%;
+        width: 80px;
+        font-size: 0;
+        outline: none;
+        cursor: pointer;
 
-  //     &--next {
-  //       right: 0;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 50%;
+          width: 29px;
+          height: 29px;
+          transform-origin: 50% 50%;
+          border: 2px solid #bec2c7;
+        }
 
-  //       &::before {
-  //         right: 0;
-  //         transform: translate(-5px, -50%) rotate(-45deg);
-  //         border-left: none;
-  //         border-top: none;
-  //       }
-  //     }
-  //   }
-  // }
+        &--prev {
+          left: 0;
+
+          &::before {
+            left: 0;
+            transform: translate(5px, -50%) rotate(-45deg);
+            border-bottom: none;
+            border-right: none;
+          }
+        }
+
+        &--next {
+          right: 0;
+
+          &::before {
+            right: 0;
+            transform: translate(-5px, -50%) rotate(-45deg);
+            border-left: none;
+            border-top: none;
+          }
+        }
+      }
+    }
+  }
 }
