--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,10 @@
 @import 'blocks/content-description';
 @import 'blocks/form';
 @import 'blocks/content';
+@import 'blocks/popup';
+@import 'blocks/offer-block';
+@import 'blocks/research';
+@import 'blocks/comment';
 @import 'blocks/page-footer';
 @import 'blocks/photo-post';
 @import 'blocks/post-photo';
@@ -18,4 +22,5 @@
 @import 'blocks/versions-table';
 @import 'blocks/wrapper';
 @import 'blocks/contacts-block';
+
 
