--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,8 +1,3 @@
-$gl1-color: green;
-$gl2-color: red;
-$gl3-color: black;
-$gl4-color: blue;
-
 $pages-text-color: #283645;
 $pages-text-color-pink: #d22856;
 
@@ -19,7 +14,8 @@ $form-label-color-pink: #d22856;
 $form-field-color-gray: #e5e5e5;
 
 $button-color: #2aab6d;
-
+$button-color-hover: #1c9b5e;
+$button-text-color-active: #7dbd99;
 
 $mobile-width-only: "(max-width: 700px)";
 $tablet-width: "(min-width: 700px)";
