--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,5 +1,8 @@
 .intro {
-  background: $pages-text-color url(../img/bg-back-mobile.jpg) no-repeat 50% 0;
+  background-color: $pages-text-color;
+  background-image: url(../img/bg-back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
   color: #fff;
   padding-top: 96px;
   padding-bottom: 54px;
@@ -24,9 +27,25 @@
   &--index-page {
     padding-top: 456px;
     padding-bottom: 0;
-    background:
-    url(../img/iphone-hand-mobile.png) no-repeat 0 172px,
-    url(../img/bg-back-mobile.jpg) no-repeat 50% -6px;
+    background-image:
+    url(../img/iphone-hand-mobile.png),
+    url(../img/bg-back-mobile.jpg);
+    background-repeat: no-repeat, no-repeat;
+    background-position: 0 172px, 50% -6px;
+  }
+
+  @media
+  (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+    background-image: url(../img/bg-back-mobile@2x.jpg);
+    background-size: 700px auto;
+
+    &--index-page {
+      background-image:
+      url(../img/iphone-hand-mobile@2x.png),
+      url(../img/bg-back-mobile@2x.jpg);
+      background-size: 258px auto, 700px auto;
+    }
   }
 
   @media #{$mobile-width-only} {
@@ -38,7 +57,9 @@
   }
 
   @media #{$tablet-width} {
-    background: $pages-text-color url(../img/bg-back-tablet@1x.jpg) no-repeat 50% 0;
+    background-image: url(../img/bg-back-tablet@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
     padding-top: 180px;
     padding-bottom: 80px;
 
@@ -57,9 +78,11 @@
     &--index-page {
       padding-top: 204px;
       padding-right: 50%;
-      background:
-      url(../img/iphone-hand-tablet@1x.png) no-repeat 100% 100%,
-      $pages-text-color url(../img/bg-back-tablet@1x.jpg) no-repeat 50% 0;
+      background-image:
+      url(../img/iphone-hand-tablet@1x.png),
+      url(../img/bg-back-tablet@1x.jpg);
+      background-repeat: no-repeat, no-repeat;
+      background-position: 100% 100%, 50% 0;
 
       .intro__wrapper {
         padding-right: 10px;
@@ -74,6 +97,20 @@
 
     &--photo-page {
       padding-bottom: 140px;
+    }
+
+    @media
+    (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      background-image: url(../img/bg-back-tablet@2x.jpg);
+      background-size: 1200px auto;
+
+      &--index-page {
+        background-image:
+        url(../img/iphone-hand-tablet@2x.png),
+        url(../img/bg-back-tablet@2x.jpg);
+        background-size: 700px auto, 1200px auto;
+      }
     }
   }
 
@@ -90,9 +127,11 @@
       padding-top: 218px;
       padding-right: 53.5%;
       padding-bottom: 92px;
-      background:
-      url(../img/iphone-hand-desktop@1x.png) no-repeat 97% 100%,
-      $pages-text-color url(../img/bg-back-desktop.jpg) no-repeat 50% 0;
+      background-image:
+      url(../img/iphone-hand-desktop@1x.png),
+      url(../img/bg-back-desktop.jpg);
+      background-repeat: no-repeat, no-repeat;
+      background-position: 97% 100%, 50% 0;
 
       .intro__text {
         font-size: 50px;
@@ -115,6 +154,17 @@
     &--photo-page {
       padding-right: 260px;
       padding-left: 260px;
+    }
+
+    @media
+    (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      &--index-page {
+        background-image:
+        url(../img/iphone-hand-desktop@2x.png),
+        url(../img/bg-back-desktop.jpg);
+        background-size: 1050px auto, 2568px auto;
+      }
     }
   }
 }
