--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -36,6 +36,7 @@
     box-sizing: border-box;
     padding: 36px 25px;
     margin: 0 auto;
+    font-weight: 400;
 
     &--hidden {
       display: none;
@@ -240,13 +241,14 @@
           margin: 0 auto;
           padding: 0 25px;
           z-index: 1;
+          font-weight: 400;
         }
 
         .form__title-wrapper {
           display: block;
           text-align: center;
           position: absolute;
-          top: -12px;
+          top: -18px;
           left: 0;
           right: 0;
           background-color: white;
@@ -255,7 +257,7 @@
             content: '';
             display: block;
             position: relative;
-            top: -10px;
+            top: -16px;
             height: 2px;
             background-color: $pages-color-dark-gray;
             z-index: 0;
