--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,29 +1,19 @@
-// @font-face {
-//   font-family: "Open Sans";
-//   font-style: normal;
-//   font-weight: 400;
-//   src:
-//       local("Open Sans"),
-//       local("Open-Sans"),
-//       url("../fonts/opensans.woff") format("woff");
-// }
-
-// @font-face {
-//   font-family: "Open Sans";
-//   font-style: normal;
-//   font-weight: 700;
-//   src:
-//       local("Open Sans"),
-//       local("Open-Sans"),
-//       url("../fonts/opensansbold.woff") format("woff");
-// }
-
+/* cyrillic */
 @font-face {
-  font-weight: 300;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightcyrillic.woff2") format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
 
-  src: url("../fonts/opensanslight.woff2") format("woff2");
+/* latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightlatin.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @font-face {
