Правки по критериям Б13, Б19, Б30

--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -24,7 +24,7 @@
 
   &--open {
     background-color: $pages-text-color;
-    margin-bottom: -326px;
+    // margin-bottom: -326px;
 
     .page-header__wrapper {
       padding-bottom: 24px;
@@ -52,7 +52,7 @@
     }
 
     &--open {
-      margin-bottom: -365px;
+      // margin-bottom: -365px;
       .page-header__wrapper {
         padding-bottom: 41px;
       }
