--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,15 @@
 @import 'blocks/intro';
 @import 'blocks/content-description';
 @import 'blocks/form';
-@import 'blocks/content';
+@import 'blocks/logo';
+@import 'blocks/social-links';
+@import 'blocks/button';
+@import 'blocks/like-field';
+@import 'blocks/range-controls';
+@import 'blocks/transparent-btn';
+@import 'blocks/store-links';
+@import 'blocks/map';
+@import 'blocks/posts-list';
 @import 'blocks/popup';
 @import 'blocks/offer-block';
 @import 'blocks/research';
