--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -138,7 +138,7 @@
           top: 11px;
           width: 30px;
           height: 30px;
-          background: url('../img/icon-yes.svg') no-repeat;
+          background: url('../img/icon-yes-pink.svg') no-repeat;
           display: none;
         }
 
