--- a/sass/blocks/post-photo.scss
+++ b/sass/blocks/post-photo.scss
@@ -50,48 +50,33 @@
     height: 50px;
 
     &--filter1 {
-      background: transparent url(../img/icon-editor-crop.svg) 50% 50% no-repeat;
+      background: transparent url(../img/icon-editor-crop-gray.svg) 50% 50% no-repeat;
     }
 
     &--filter2 {
-      background: transparent url(../img/icon-editor-fill.svg) 50% 50% no-repeat;
+      background: transparent url(../img/icon-editor-fill-gray.svg) 50% 50% no-repeat;
     }
 
     &--filter3 {
+      background: transparent url(../img/icon-editor-contrast-gray.svg) 50% 50% no-repeat;
+    }
+
+    &--filter1-active {
+      background: transparent url(../img/icon-editor-crop.svg) 50% 50% no-repeat;
+    }
+
+    &--filter2-active {
+      background: transparent url(../img/icon-editor-fill.svg) 50% 50% no-repeat;
+    }
+
+    &--filter3-active {
       background: transparent url(../img/icon-editor-contrast.svg) 50% 50% no-repeat;
     }
   }
 
   &__filter-controller {
-    // position: relative;
     padding: 20px 40px 34px 40px;
     border-bottom: 1px solid $cansel-btn-color-dark-gray;
-
-    // &::after {
-    //   border: 1px solid #000;
-    //   content: '';
-    //   position: absolute;
-    //   width: 35px;
-    //   height: 35px;
-    //   left: 0;
-    //   top: 50%;
-    //   transform: translateY(-50%);
-    // }
-
-    // &--filter1::after {
-    //   background: url(../img/icon-editor-crop.svg) no-repeat 50% 50%;
-    //   background-size: 25px 25px;
-    // }
-
-    // &--filter2::after {
-    //   background: url(../img/icon-editor-fill.svg) no-repeat 50% 50%;
-    //   background-size: 25px 25px;
-    // }
-
-    // &--filter3::after {
-    //   background: url(../img/icon-editor-contrast.svg) no-repeat 50% 50%;
-    //   background-size: 16px 16px;
-    // }
   }
 
   &__buttons {
@@ -103,7 +88,6 @@
   @media #{$mobile-width-only} {
     background-color: $pages-color-gray;
     &__filter-controller {
-
       &:not(.post-photo__filter-controller--active) {
         display: none;
       }
@@ -200,16 +184,34 @@
       margin-bottom: 26px;
 
       &--filter1 {
+        background-image: url(../img/icon-editor-crop.svg);
         background-size: 25px 25px;
         background-position: 2px 50%;
       }
 
       &--filter2 {
+        background-image: url(../img/icon-editor-fill.svg);
         background-size: 25px 25px;
         background-position: 3px 50%;
       }
 
       &--filter3 {
+        background-image: url(../img/icon-editor-contrast.svg);
+        background-size: 16px 16px;
+        background-position: 8px 50%;
+      }
+
+      &--filter1-active {
+        background-size: 25px 25px;
+        background-position: 2px 50%;
+      }
+
+      &--filter2-active {
+        background-size: 25px 25px;
+        background-position: 3px 50%;
+      }
+
+      &--filter3-active {
         background-size: 16px 16px;
         background-position: 8px 50%;
       }
@@ -313,6 +315,21 @@
       }
 
       &--filter3 {
+        background-size: 32px 32px;
+        background-position: 22% 47%;
+      }
+
+      &--filter1-active {
+        background-size: 48px 48px;
+        background-position: -2px 0;
+      }
+
+      &--filter2-active {
+        background-size: 48px 48px;
+        background-position: 0 53%;
+      }
+
+      &--filter3-active {
         background-size: 32px 32px;
         background-position: 22% 47%;
       }
