--- a/sass/base.scss
+++ b/sass/base.scss
@@ -12,16 +12,41 @@ body {
 
 input::-webkit-input-placeholder {
   @include form-field-font-settings;
+  opacity: 1;
 }
 
-input::-moz-placeholder {
+input::-moz-placeholder          {
   @include form-field-font-settings;
+  opacity: 1;
+}
+
+input:-moz-placeholder           {
+  @include form-field-font-settings;
+  opacity: 1;
+}
+
+input:-ms-input-placeholder      {
+  @include form-field-font-settings;
+  opacity: 1;
 }
 
 textarea::-webkit-input-placeholder {
   @include form-field-font-settings;
+  opacity: 1;
 }
 
-textarea::-moz-placeholder {
+textarea::-moz-placeholder          {
   @include form-field-font-settings;
+  opacity: 1;
 }
+
+textarea:-moz-placeholder           {
+  @include form-field-font-settings;
+  opacity: 1;
+}
+
+textarea:-ms-input-placeholder      {
+  @include form-field-font-settings;
+  opacity: 1;
+}
+
