--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -21,6 +21,14 @@
     text-transform: uppercase;
     padding: 15px;
     text-align: center;
+
+    &:hover {
+      color: $pages-text-color-pink;
+    }
+
+    &:active {
+      color: transparentize($pages-text-color-pink, 0.7);
+    }
   }
 
   @media #{$desktop-width} {
@@ -37,11 +45,39 @@
     }
 
     &__link {
-      padding: 0;
+      position: relative;
+      padding: 14px 0;
       line-height: 18px;
       font-weight: 400;
       text-transform: none;
       text-align: left;
+
+      &::after {
+        content: '';
+        position: absolute;
+        height: 2px;
+        background-color: white;
+        bottom: 0;
+        left: 2px;
+        right: 0;
+        display: none;
+      }
+
+      &:hover {
+        color: white;
+
+        &::after {
+          display: block;
+        }
+      }
+
+      &:active {
+        color: rgba(255, 255, 255, 0.3);
+
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 }
