--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -16,16 +16,28 @@
   &__copyright-link {
     @include reset-link-style;
     display: block;
-    text-align: left;
+    text-align: right;
     color: $pages-text-color;
-    padding-right: 40px;
-    width: 90px;
+    width: 130px;
     min-height: 34px;
-    background: url(../img/logo-htmlacademy.svg) no-repeat 100% 0;
-    background-size: 27px 34px;
 
     span {
       display: none;
+    }
+  }
+
+  &__copyright-icon {
+    display: inline-block;
+    vertical-align: middle;
+    fill: $pages-text-color-pink;
+    margin-left: 10px;
+
+    &:hover {
+      fill: #283645;
+    }
+
+    &:active {
+      fill: transparentize(#283645, 0.7);
     }
   }
 
@@ -58,12 +70,11 @@
 
     &__copyright-link {
       margin-top: 22px;
-      padding-right: 38px;
     }
 
     &--photo-page {
       .page-footer__container {
-        padding-top: 0px;
+        padding-top: 0;
         min-height: 111px;
       }
     }
@@ -84,7 +95,7 @@
 
     &__copyright-link {
       font-size: 18px;
-      padding-right: 63px;
+      width: 155px;
     }
 
     &--index-page {
