--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -13,13 +13,38 @@
   &__toggle-menu {
     @include reset-button-style;
     font-size: 0;
+    text-align: right;
     width: 50px;
     height: 24px;
-    background: url(../img/icon-menu-burger.svg) no-repeat 100% 0%;
+    outline: none;
+
+    &:active {
+      outline: none;
+    }
   }
 
   .main-nav {
     display: none;
+  }
+
+  .page-header__toggle-icon {
+    fill: white;
+
+    &--cross {
+      display: none;
+    }
+  }
+
+  &__toggle-menu:hover {
+    .page-header__toggle-icon {
+      fill: $pages-text-color-pink;
+    }
+  }
+
+  &__toggle-menu:active {
+    .page-header__toggle-icon {
+      fill: transparentize($pages-text-color-pink, 0.7);
+    }
   }
 
   &--open {
@@ -35,8 +60,12 @@
       display: block;
     }
 
-    .page-header__toggle-menu {
-      background: url(../img/icon-menu-cross.svg) no-repeat 100% 0%;
+    .page-header__toggle-icon {
+      display: none;
+
+      &--cross {
+         display: inline-block;
+      }
     }
   }
 
