--- a/sass/blocks/popup.scss
+++ b/sass/blocks/popup.scss
@@ -1,5 +1,6 @@
 .popup {
   display: block;
+  position: relative;
   box-sizing: border-box;
   width: 320px;
   font-size: 14px;
@@ -8,6 +9,7 @@
   padding: 40px 0 0 0;
   background-color: #fff;
   box-shadow: 0px 7px 30px -5px rgba(0,1,1,0.3);
+  z-index: 3;
 
   &__wrapper {
     @include content-wrapper-mobile;
